# bitbroker

./: .pre-commit-config.yaml  get_historic_data.py  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
bitbroker/: brokers.py  data-preprocessing.py  graph.py  indicators.py  run_parallel_simulation.py  run_simulation.py  train-a-broker.py
tests/: test_indicators.py
tools/: get_historic_data.py  hull_json2pd.py  map_usd_to_btc.py  remove_dups_show_gaps.py
