[metadata]
name = bitbroker
description = simple trading bot
author = Ing. Alexander Gažo
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = bitbroker
python_requires = >=3.6

[flake8]
max-complexity = 22
max-line-length = 99
ignore =
    E203
    E501

[tool:pytest]
minversion = 6.0
addopts = -ra
testpaths =
    tests
